--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -28,9 +28,12 @@
     font-size: 13px;
     // transform: translateY(5px);
 }
+
 .head-searchicon{
+    // font-size: 20px;
+    margin-top: 2px;
     padding: 5px;
-    height: 22px;
+    height: 25px;
     background-color: #cd9042;
 }
 
